<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">2019</string>
    <string name="app_title">智能交通</string>
    <string name="action_settings">设置</string>
    <string name="hint_name">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_mspwd">请再次输入密码</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="setting">网络设置</string>
    <string name="auto_login">自动登陆</string>
    <string name="rememberpwd">记住密码</string>
    <string name="register">注册</string>

    <string name="error_ip">服务器地址不能为空！</string>

    <string name="res_left_wodezhanghu">我的账户</string>
    <string name="res_left_zhanghuguanli">账单管理</string>
    <string name="res_left_honglvdengguanli">红路灯管理</string>
    <string name="res_left_chuanyi">创意</string>
    <string name="res_left_exit">用户退出</string>
    <string name="info_result">通讯数据返回结果！</string>
    <string name="info_app">欢迎使用智能交通APP！
"本系统的主要功能包括我的账户、账单管理、红绿灯管理、违章视频、公交查询、实时环境和车位查询等。</string>


    <string-array name="carId">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="time">
        <item>时间升序</item>
        <item>时间降序</item>
    </string-array>

    <string-array name="traffic">
        <item>路口升序</item>
        <item>路口降序</item>
        <item>红灯升序</item>
        <item>红灯降序</item>
        <item>绿灯升序</item>
        <item>绿灯降序</item>
        <item>黄灯升序</item>
        <item>黄灯降序</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
