<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp" >

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:singleLine="true"
                android:layout_weight="1" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp" >

            <EditText
                android:id="@+id/et_user_pwd"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pwd"
                android:singleLine="true"
                android:layout_weight="1"
                android:password="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp" >

            <EditText
                android:id="@+id/et_user_pwd_second"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mspwd"
                android:layout_weight="1"
                android:singleLine="true"
                android:password="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="请输入手机号码"
                android:layout_weight="1"
                android:singleLine="true"
                android:inputType="phone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <Button
                android:id="@+id/bt_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
